{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 366,
  "lineage": "aa58284f-dbc8-d2bf-066f-c2cbbf60cf71",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "existing_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396868033617:route-table/rtb-07eb430e86549ade9",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0029919896d19638d",
                "route_table_id": "rtb-07eb430e86549ade9",
                "subnet_id": "subnet-0ba7bc35645d9e6b1"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-07eb430e86549ade9",
            "owner_id": "396868033617",
            "region": "ap-south-1",
            "route_table_id": "rtb-07eb430e86549ade9",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011d5e93a7aff19fa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "route-main"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b16fe47f073db23"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "existing_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396868033617:subnet/subnet-0ba7bc35645d9e6b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba7bc35645d9e6b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396868033617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "state": "available",
            "tags": {
              "Name": "subnet-main"
            },
            "vpc_id": "vpc-02b16fe47f073db23"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396868033617:vpc/vpc-02b16fe47f073db23",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-062e288e2faa8607d",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0d8d6a91adf1f24c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b16fe47f073db23",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04f6f6b2a363de36f",
            "owner_id": "396868033617",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpc-main-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "node1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0011550b539717e2a",
            "arn": "arn:aws:ec2:ap-south-1:396868033617:instance/i-0d6198544588c16e5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6198544588c16e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "project1_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01ebd4740aeaf289b"
              }
            ],
            "primary_network_interface_id": "eni-01ebd4740aeaf289b",
            "private_dns": "ip-10-2-0-229.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.229",
            "public_dns": "ec2-13-201-25-110.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.25.110",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-035fdef71d872148b",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e3850e57ad418da4",
            "tags": {
              "Name": "node1"
            },
            "tags_all": {
              "Name": "node1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06121252016cf185e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "i-0d6198544588c16e5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.tf_key",
            "aws_security_group.tf_sg",
            "aws_subnet.lb_subnet_1",
            "aws_subnet.lb_subnet_2",
            "aws_subnet.tf_subnet",
            "aws_vpc.tf_vpc",
            "data.aws_subnet.existing_subnet"
          ]
        },
        {
          "index_key": "node2",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0011550b539717e2a",
            "arn": "arn:aws:ec2:ap-south-1:396868033617:instance/i-0a706324486423f8a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a706324486423f8a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "project1_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08e3a1e6701534a44"
              }
            ],
            "primary_network_interface_id": "eni-08e3a1e6701534a44",
            "private_dns": "ip-10-2-0-79.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.79",
            "public_dns": "ec2-65-2-140-152.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.140.152",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fca0b283cc909917",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e3850e57ad418da4",
            "tags": {
              "Name": "node2"
            },
            "tags_all": {
              "Name": "node2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06121252016cf185e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "i-0a706324486423f8a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.tf_key",
            "aws_security_group.tf_sg",
            "aws_subnet.lb_subnet_1",
            "aws_subnet.lb_subnet_2",
            "aws_subnet.tf_subnet",
            "aws_vpc.tf_vpc",
            "data.aws_subnet.existing_subnet"
          ]
        },
        {
          "index_key": "node3",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0011550b539717e2a",
            "arn": "arn:aws:ec2:ap-south-1:396868033617:instance/i-047acbba7c82f0cda",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047acbba7c82f0cda",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "project1_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-070a2e1b8f6f37f37"
              }
            ],
            "primary_network_interface_id": "eni-070a2e1b8f6f37f37",
            "private_dns": "ip-10-2-0-245.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.245",
            "public_dns": "ec2-65-2-172-253.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.172.253",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08bcabd12ceaddf77",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e3850e57ad418da4",
            "tags": {
              "Name": "node3"
            },
            "tags_all": {
              "Name": "node3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06121252016cf185e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "i-047acbba7c82f0cda",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.tf_key",
            "aws_security_group.tf_sg",
            "aws_subnet.lb_subnet_1",
            "aws_subnet.lb_subnet_2",
            "aws_subnet.tf_subnet",
            "aws_vpc.tf_vpc",
            "data.aws_subnet.existing_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396868033617:internet-gateway/igw-05cb1331859513d6e",
            "id": "igw-05cb1331859513d6e",
            "owner_id": "396868033617",
            "region": "ap-south-1",
            "tags": {
              "Name": "VPC For Project1"
            },
            "tags_all": {
              "Name": "VPC For Project1"
            },
            "vpc_id": "vpc-04685eb9681df380d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "igw-05cb1331859513d6e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "lbtf-logs",
                "enabled": true,
                "prefix": "LBTF_Logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:loadbalancer/app/LBTF/7cfc3e1650f64dbb",
            "arn_suffix": "app/LBTF/7cfc3e1650f64dbb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "LBTF-984376798.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:loadbalancer/app/LBTF/7cfc3e1650f64dbb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "LBTF",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0f493322ee36802df"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-045b9b4eb380aa753"
              },
              {
                "subnet_id": "subnet-0be02c6559e48212d"
              }
            ],
            "subnets": [
              "subnet-045b9b4eb380aa753",
              "subnet-0be02c6559e48212d"
            ],
            "tags": {
              "Name": "LBTF"
            },
            "tags_all": {
              "Name": "LBTF"
            },
            "vpc_id": "vpc-04685eb9681df380d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:loadbalancer/app/LBTF/7cfc3e1650f64dbb"
          },
          "dependencies": [
            "aws_s3_bucket.tf_s3",
            "aws_security_group.lb_sg",
            "aws_subnet.lb_subnet_1",
            "aws_subnet.lb_subnet_2",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listenr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:listener/app/LBTF/7cfc3e1650f64dbb/ab16b8c9b107c2f4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:targetgroup/LBTF-Target-Group/fd2808c4fd4e2937",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:listener/app/LBTF/7cfc3e1650f64dbb/ab16b8c9b107c2f4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:loadbalancer/app/LBTF/7cfc3e1650f64dbb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:listener/app/LBTF/7cfc3e1650f64dbb/ab16b8c9b107c2f4"
          },
          "dependencies": [
            "aws_lb.tf_lb",
            "aws_lb_target_group.instance_tg",
            "aws_s3_bucket.tf_s3",
            "aws_security_group.lb_sg",
            "aws_subnet.lb_subnet_1",
            "aws_subnet.lb_subnet_2",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "instance_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:targetgroup/LBTF-Target-Group/fd2808c4fd4e2937",
            "arn_suffix": "targetgroup/LBTF-Target-Group/fd2808c4fd4e2937",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:targetgroup/LBTF-Target-Group/fd2808c4fd4e2937",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "LBTF-Target-Group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04685eb9681df380d"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:targetgroup/LBTF-Target-Group/fd2808c4fd4e2937"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "node1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:targetgroup/LBTF-Target-Group/fd2808c4fd4e2937,i-0d6198544588c16e5,80",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:targetgroup/LBTF-Target-Group/fd2808c4fd4e2937",
            "target_id": "i-0d6198544588c16e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:targetgroup/LBTF-Target-Group/fd2808c4fd4e2937",
            "target_id": "i-0d6198544588c16e5"
          },
          "dependencies": [
            "aws_instance.tf_ec2",
            "aws_key_pair.tf_key",
            "aws_lb_target_group.instance_tg",
            "aws_security_group.tf_sg",
            "aws_subnet.lb_subnet_1",
            "aws_subnet.lb_subnet_2",
            "aws_subnet.tf_subnet",
            "aws_vpc.tf_vpc",
            "data.aws_subnet.existing_subnet"
          ]
        },
        {
          "index_key": "node2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:targetgroup/LBTF-Target-Group/fd2808c4fd4e2937,i-0a706324486423f8a,80",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:targetgroup/LBTF-Target-Group/fd2808c4fd4e2937",
            "target_id": "i-0a706324486423f8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:targetgroup/LBTF-Target-Group/fd2808c4fd4e2937",
            "target_id": "i-0a706324486423f8a"
          },
          "dependencies": [
            "aws_instance.tf_ec2",
            "aws_key_pair.tf_key",
            "aws_lb_target_group.instance_tg",
            "aws_security_group.tf_sg",
            "aws_subnet.lb_subnet_1",
            "aws_subnet.lb_subnet_2",
            "aws_subnet.tf_subnet",
            "aws_vpc.tf_vpc",
            "data.aws_subnet.existing_subnet"
          ]
        },
        {
          "index_key": "node3",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:targetgroup/LBTF-Target-Group/fd2808c4fd4e2937,i-047acbba7c82f0cda,80",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:targetgroup/LBTF-Target-Group/fd2808c4fd4e2937",
            "target_id": "i-047acbba7c82f0cda"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:396868033617:targetgroup/LBTF-Target-Group/fd2808c4fd4e2937",
            "target_id": "i-047acbba7c82f0cda"
          },
          "dependencies": [
            "aws_instance.tf_ec2",
            "aws_key_pair.tf_key",
            "aws_lb_target_group.instance_tg",
            "aws_security_group.tf_sg",
            "aws_subnet.lb_subnet_1",
            "aws_subnet.lb_subnet_2",
            "aws_subnet.tf_subnet",
            "aws_vpc.tf_vpc",
            "data.aws_subnet.existing_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ex_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07eb430e86549ade92377918344",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-07eb430e86549ade9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-07563a8de61d3bd6f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "destination_cidr_block": "10.2.0.0/24",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-07eb430e86549ade9"
          },
          "dependencies": [
            "aws_subnet.tf_subnet",
            "aws_vpc.tf_vpc",
            "aws_vpc_peering_connection.tf_peer",
            "data.aws_caller_identity.owner",
            "data.aws_route_table.existing_rt",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lb_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396868033617:route-table/rtb-0becca66ed4df15ef",
            "id": "rtb-0becca66ed4df15ef",
            "owner_id": "396868033617",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05cb1331859513d6e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lb_rt"
            },
            "tags_all": {
              "Name": "lb_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04685eb9681df380d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "rtb-0becca66ed4df15ef",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396868033617:route-table/rtb-0f13969b34a82b5d5",
            "id": "rtb-0f13969b34a82b5d5",
            "owner_id": "396868033617",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05cb1331859513d6e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-07563a8de61d3bd6f"
              }
            ],
            "tags": {
              "Name": "Project1_rt"
            },
            "tags_all": {
              "Name": "Project1_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04685eb9681df380d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "rtb-0f13969b34a82b5d5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.tf_vpc",
            "aws_vpc_peering_connection.tf_peer",
            "data.aws_caller_identity.owner",
            "data.aws_subnet.existing_subnet",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lb_rt_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0befbbd8189e2b2e7",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f13969b34a82b5d5",
            "subnet_id": "subnet-045b9b4eb380aa753"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "rtbassoc-0befbbd8189e2b2e7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.tf_rt",
            "aws_subnet.lb_subnet_1",
            "aws_vpc.tf_vpc",
            "aws_vpc_peering_connection.tf_peer",
            "data.aws_caller_identity.owner",
            "data.aws_subnet.existing_subnet",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lb_rt_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e6e2c46d4bebb7a",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f13969b34a82b5d5",
            "subnet_id": "subnet-0be02c6559e48212d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "rtbassoc-07e6e2c46d4bebb7a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.tf_rt",
            "aws_subnet.lb_subnet_2",
            "aws_vpc.tf_vpc",
            "aws_vpc_peering_connection.tf_peer",
            "data.aws_caller_identity.owner",
            "data.aws_subnet.existing_subnet",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b02f5ad47386133",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f13969b34a82b5d5",
            "subnet_id": "subnet-0e3850e57ad418da4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "rtbassoc-06b02f5ad47386133",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.tf_rt",
            "aws_subnet.tf_subnet",
            "aws_vpc.tf_vpc",
            "aws_vpc_peering_connection.tf_peer",
            "data.aws_caller_identity.owner",
            "data.aws_subnet.existing_subnet",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396868033617:security-group/sg-0f493322ee36802df",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f493322ee36802df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-140effd68e01b7862ed35dc5fb",
            "name_prefix": "terraform-",
            "owner_id": "396868033617",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LB_SG"
            },
            "tags_all": {
              "Name": "LB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04685eb9681df380d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "sg-0f493322ee36802df",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396868033617:security-group/sg-06121252016cf185e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06121252016cf185e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.2.1.0/24",
                  "10.2.2.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-7d8e2fa3850c4994b36dff3b06",
            "name_prefix": "terraform-",
            "owner_id": "396868033617",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Project1_SG"
            },
            "tags_all": {
              "Name": "Project1_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04685eb9681df380d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "sg-06121252016cf185e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_subnet.lb_subnet_1",
            "aws_subnet.lb_subnet_2",
            "aws_vpc.tf_vpc",
            "data.aws_subnet.existing_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lb_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396868033617:subnet/subnet-045b9b4eb380aa753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045b9b4eb380aa753",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396868033617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "LB_Subnet_1"
            },
            "tags_all": {
              "Name": "LB_Subnet_1"
            },
            "vpc_id": "vpc-04685eb9681df380d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "subnet-045b9b4eb380aa753",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lb_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396868033617:subnet/subnet-0be02c6559e48212d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be02c6559e48212d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396868033617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "LB_Subnet_2"
            },
            "tags_all": {
              "Name": "LB_Subnet_2"
            },
            "vpc_id": "vpc-04685eb9681df380d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "subnet-0be02c6559e48212d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396868033617:subnet/subnet-0e3850e57ad418da4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3850e57ad418da4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396868033617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Project1_Subnet"
            },
            "tags_all": {
              "Name": "Project1_Subnet"
            },
            "vpc_id": "vpc-04685eb9681df380d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "subnet-0e3850e57ad418da4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396868033617:vpc/vpc-04685eb9681df380d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-01f6d639b5d8fa20b",
            "default_route_table_id": "rtb-0d54ae4abde42520a",
            "default_security_group_id": "sg-0a5c5de75a0503132",
            "dhcp_options_id": "dopt-0d8d6a91adf1f24c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04685eb9681df380d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d54ae4abde42520a",
            "owner_id": "396868033617",
            "region": "ap-south-1",
            "tags": {
              "Name": "Project1_VPC"
            },
            "tags_all": {
              "Name": "Project1_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396868033617",
            "id": "vpc-04685eb9681df380d",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "tf_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-07563a8de61d3bd6f",
            "peer_owner_id": "396868033617",
            "peer_region": "ap-south-1",
            "peer_vpc_id": "vpc-04685eb9681df380d",
            "region": "ap-south-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Name": "Project1_peer"
            },
            "tags_all": {
              "Name": "Project1_peer"
            },
            "vpc_id": "vpc-02b16fe47f073db23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf_vpc",
            "data.aws_caller_identity.owner",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    }
  ]
}